finalizing socket->db relationship for validation